--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       width="100%"
       height="200"
       alt="Movie image">
-      <h3 class="movie-title"></h3>
+      <h3 class="movie-title pt-3 fw-normal"></h3>
       <ul class="list-unstyled d-flex">
         <li>
           ⭐<span class="movie-star"></span>
